# IndiaNavi.rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.devcontainer/: devcontainer.json
app/: Cargo.toml
app/src/: lib.rs
app/src/gui/: mod.rs
docs/: README.md
firmware/: Cargo.toml
firmware/src/: main.rs
scripts/: flash.sh
sim/: Cargo.toml
