[workspace]
resolver = "2"
members = [ "app","firmware"]

[workspace.package]
version = "0.1.0"
authors = ["Bastian Neumann <neumann.bastian@gmail.com>"]
description = "Software for the IndiaNavi Project"
documentation = "https://platinenmacher.tech/navi"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
