[package]
name = "fast-refresh-eink"
edition = "2021"
resolver = "2"
rust-version = "1.77"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[[bin]]
name = "fast-refresh-eink"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
epd-waveshare = { path = "../external/epd-waveshare" }
anyhow = "1.0.98"

[build-dependencies]
embuild = "0.33"
